--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,72 +1,86 @@
 # 2024-04-04
 
-共 200 条
+共 213 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 13:00:51 GMT+0800 (China Standard Time) -->
-1. [马英九率台湾青年公祭轩辕黄帝](https://so.toutiao.com/search?keyword=马英九率台湾青年公祭轩辕黄帝)
-1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
+<!-- 最后更新时间 Thu Apr 04 2024 14:00:41 GMT+0800 (China Standard Time) -->
+1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
+1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
 1. [家国永念](https://so.toutiao.com/search?keyword=家国永念)
 1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
-1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
+1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
 1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
+1. [台湾花莲地震重创公路 航拍照曝光](https://so.toutiao.com/search?keyword=台湾花莲地震重创公路+航拍照曝光)
+1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
 1. [奔驰女司机碾压孩子后驶离](https://so.toutiao.com/search?keyword=奔驰女司机碾压孩子后驶离)
-1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
 1. [知名外企要彻底撤离中国？假的](https://so.toutiao.com/search?keyword=知名外企要彻底撤离中国？假的)
-1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
-1. [官方回应大熊貓福宝疑似被戳](https://so.toutiao.com/search?keyword=官方回应大熊貓福宝疑似被戳)
-1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
+1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
+1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
 1. [地震警报响起16岁男生抱起同桌撤离](https://so.toutiao.com/search?keyword=地震警报响起16岁男生抱起同桌撤离)
 1. [北约或将正式承担起对乌军援责任](https://so.toutiao.com/search?keyword=北约或将正式承担起对乌军援责任)
+1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
 1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
-1. [日本一大学数人遭雷击 2人心脏骤停](https://so.toutiao.com/search?keyword=日本一大学数人遭雷击+2人心脏骤停)
-1. [台湾花莲倾斜大楼位移又增加5厘米](https://so.toutiao.com/search?keyword=台湾花莲倾斜大楼位移又增加5厘米)
-1. [《与凤行》圆房名场面](https://so.toutiao.com/search?keyword=《与凤行》圆房名场面)
-1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
+1. [官方回应福宝被人不戴手套戳头](https://so.toutiao.com/search?keyword=官方回应福宝被人不戴手套戳头)
+1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
+1. [英国游客大赞杭州是旅游胜地](https://so.toutiao.com/search?keyword=英国游客大赞杭州是旅游胜地)
+1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
 1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [祁连山盗采事件举报人坠亡](https://so.toutiao.com/search?keyword=祁连山盗采事件举报人坠亡)
-1. [清明节可以说快乐吗](https://so.toutiao.com/search?keyword=清明节可以说快乐吗)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [军嫂带龙凤胎到部队探亲](https://so.toutiao.com/search?keyword=军嫂带龙凤胎到部队探亲)
+1. [俄老人钓鱼被困吃树皮和鱼生存多月](https://so.toutiao.com/search?keyword=俄老人钓鱼被困吃树皮和鱼生存多月)
 1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
+1. [《与凤行》圆房名场面](https://so.toutiao.com/search?keyword=《与凤行》圆房名场面)
+1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
 1. [美媒：以色列升级对伊朗的影子战争](https://so.toutiao.com/search?keyword=美媒：以色列升级对伊朗的影子战争)
+1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
+1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
 1. [以色列军方和总统接连道歉](https://so.toutiao.com/search?keyword=以色列军方和总统接连道歉)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
-1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
-1. [小学生向烈士英名墙跪拜](https://so.toutiao.com/search?keyword=小学生向烈士英名墙跪拜)
-1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
+1. [台湾花莲倾斜大楼位移又增加5厘米](https://so.toutiao.com/search?keyword=台湾花莲倾斜大楼位移又增加5厘米)
+1. [小学生向烈士英名墙跪拜](https://so.toutiao.com/search?keyword=小学生向烈士英名墙跪拜)
+1. [清明节可以说快乐吗](https://so.toutiao.com/search?keyword=清明节可以说快乐吗)
+1. [姜爷爷说福宝有点紧张](https://so.toutiao.com/search?keyword=姜爷爷说福宝有点紧张)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [班凯罗32分 魔术胜鹈鹕](https://so.toutiao.com/search?keyword=班凯罗32分+魔术胜鹈鹕)
+1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
+1. [詹姆斯被打到头引队友围观摸头杀](https://so.toutiao.com/search?keyword=詹姆斯被打到头引队友围观摸头杀)
+1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
+1. [日本一大学数人遭雷击 2人心脏骤停](https://so.toutiao.com/search?keyword=日本一大学数人遭雷击+2人心脏骤停)
+1. [00后美术生接力为烈士画像](https://so.toutiao.com/search?keyword=00后美术生接力为烈士画像)
+1. [美媒：西方帮助乌无人机袭击俄腹地](https://so.toutiao.com/search?keyword=美媒：西方帮助乌无人机袭击俄腹地)
+1. [警号重启背后的英烈及其子女们](https://so.toutiao.com/search?keyword=警号重启背后的英烈及其子女们)
+1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
+1. [今日清明](https://so.toutiao.com/search?keyword=今日清明)
+1. [张元英魔法签名](https://so.toutiao.com/search?keyword=张元英魔法签名)
+1. [福宝的小屋里布满竹子笋笋胡萝卜](https://so.toutiao.com/search?keyword=福宝的小屋里布满竹子笋笋胡萝卜)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
+1. [马英九率台湾青年公祭轩辕黄帝](https://so.toutiao.com/search?keyword=马英九率台湾青年公祭轩辕黄帝)
+1. [官方回应大熊貓福宝疑似被戳](https://so.toutiao.com/search?keyword=官方回应大熊貓福宝疑似被戳)
+1. [祁连山盗采事件举报人坠亡](https://so.toutiao.com/search?keyword=祁连山盗采事件举报人坠亡)
+1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [房东找理由不退押金 鸡蛋里挑骨头](https://so.toutiao.com/search?keyword=房东找理由不退押金+鸡蛋里挑骨头)
 1. [黄山举行黄帝祀典暨轩辕车会活动](https://so.toutiao.com/search?keyword=黄山举行黄帝祀典暨轩辕车会活动)
 1. [医院护理师震时用身体保护新生儿](https://so.toutiao.com/search?keyword=医院护理师震时用身体保护新生儿)
-1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [中央气象台发布强对流黄色预警](https://so.toutiao.com/search?keyword=中央气象台发布强对流黄色预警)
 1. [姐姐做手工 弟弟捣乱被一巴掌拍倒](https://so.toutiao.com/search?keyword=姐姐做手工+弟弟捣乱被一巴掌拍倒)
 1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [张元英魔法签名](https://so.toutiao.com/search?keyword=张元英魔法签名)
 1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
 1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
-1. [军嫂带龙凤胎到部队探亲](https://so.toutiao.com/search?keyword=军嫂带龙凤胎到部队探亲)
-1. [詹姆斯被打到头引队友围观摸头杀](https://so.toutiao.com/search?keyword=詹姆斯被打到头引队友围观摸头杀)
-1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
 1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
 1. [出境港人中有逾八成三北上](https://so.toutiao.com/search?keyword=出境港人中有逾八成三北上)
 1. [花莲倾斜大楼待勘验结束后再拆除](https://so.toutiao.com/search?keyword=花莲倾斜大楼待勘验结束后再拆除)
 1. [俄称今年已有超10万人签署军事合同](https://so.toutiao.com/search?keyword=俄称今年已有超10万人签署军事合同)
-1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
 1. [马英九参加清明公祭轩辕黄帝典礼](https://so.toutiao.com/search?keyword=马英九参加清明公祭轩辕黄帝典礼)
 1. [女生吃夜宵拒搭讪被打 男子已刑拘](https://so.toutiao.com/search?keyword=女生吃夜宵拒搭讪被打+男子已刑拘)
 1. [女子高楼扔子 事发前抱孩子亲了一下](https://so.toutiao.com/search?keyword=女子高楼扔子+事发前抱孩子亲了一下)
 1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
 1. [林更新直播做鲫鱼豆腐汤](https://so.toutiao.com/search?keyword=林更新直播做鲫鱼豆腐汤)
 1. [开封王婆：现在上台心里有负担](https://so.toutiao.com/search?keyword=开封王婆：现在上台心里有负担)
-1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
 1. [奥沙利文：拼着赢没什么满足感](https://so.toutiao.com/search?keyword=奥沙利文：拼着赢没什么满足感)
 1. [青海茫崖5.5级地震 新疆多地有震感](https://so.toutiao.com/search?keyword=青海茫崖5.5级地震+新疆多地有震感)
 1. [贵州独山村民连续74年祭奠7名烈士](https://so.toutiao.com/search?keyword=贵州独山村民连续74年祭奠7名烈士)
 1. [倪萍清明节回忆姥姥](https://so.toutiao.com/search?keyword=倪萍清明节回忆姥姥)
 1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
-1. [姜爷爷说福宝有点紧张](https://so.toutiao.com/search?keyword=姜爷爷说福宝有点紧张)
 1. [在粤台胞谈马英九来访：双手欢迎](https://so.toutiao.com/search?keyword=在粤台胞谈马英九来访：双手欢迎)
 1. [花莲地震：一张纸条传来“好消息”](https://so.toutiao.com/search?keyword=花莲地震：一张纸条传来“好消息”)
 1. [法国防长表示愿同俄加强反恐合作](https://so.toutiao.com/search?keyword=法国防长表示愿同俄加强反恐合作)
@@ -137,7 +151,6 @@
 1. [都说“四五清明” 今年为啥不一样](https://so.toutiao.com/search?keyword=都说“四五清明”+今年为啥不一样)
 1. [日美澳菲将在南海首次联合军演](https://so.toutiao.com/search?keyword=日美澳菲将在南海首次联合军演)
 1. [耿爽：中方对伊朗的悲痛感同身受](https://so.toutiao.com/search?keyword=耿爽：中方对伊朗的悲痛感同身受)
-1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
 1. [地图上看台湾地震各地受灾情况](https://so.toutiao.com/search?keyword=地图上看台湾地震各地受灾情况)
 1. [莫斯科恐袭促更多俄罗斯人自愿参军](https://so.toutiao.com/search?keyword=莫斯科恐袭促更多俄罗斯人自愿参军)
 1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
