--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,56 +1,73 @@
 # 2024-04-04
 
-共 240 条
+共 254 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 16:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 04 2024 17:00:57 GMT+0800 (China Standard Time) -->
 1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
 1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
-1. [家国永念](https://so.toutiao.com/search?keyword=家国永念)
-1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
-1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
-1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
-1. [福宝在成都的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在成都的家里嘎嘎炫饭)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
-1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
-1. [知名外企要彻底撤离中国？假的](https://so.toutiao.com/search?keyword=知名外企要彻底撤离中国？假的)
-1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
+1. [英雄从未远去](https://so.toutiao.com/search?keyword=英雄从未远去)
+1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
 1. [地震大楼倒塌瞬间女子拔腿就跑](https://so.toutiao.com/search?keyword=地震大楼倒塌瞬间女子拔腿就跑)
+1. [交警称奔驰2次碾压小孩非主观故意](https://so.toutiao.com/search?keyword=交警称奔驰2次碾压小孩非主观故意)
 1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
+1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
+1. [福宝在成都的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在成都的家里嘎嘎炫饭)
+1. [知名外企要彻底撤离中国？假的](https://so.toutiao.com/search?keyword=知名外企要彻底撤离中国？假的)
+1. [地震警报响起16岁男生抱起同桌撤离](https://so.toutiao.com/search?keyword=地震警报响起16岁男生抱起同桌撤离)
+1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
+1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
+1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
+1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
+1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
+1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
+1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
+1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
 1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
 1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
-1. [台湾花莲地震重创公路 航拍照曝光](https://so.toutiao.com/search?keyword=台湾花莲地震重创公路+航拍照曝光)
-1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
-1. [男子在地铁站偷拍女生还指责其穿着](https://so.toutiao.com/search?keyword=男子在地铁站偷拍女生还指责其穿着)
-1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
-1. [地震警报响起16岁男生抱起同桌撤离](https://so.toutiao.com/search?keyword=地震警报响起16岁男生抱起同桌撤离)
+1. [杭州00后车主提前数小时到店提SU7](https://so.toutiao.com/search?keyword=杭州00后车主提前数小时到店提SU7)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
 1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
+1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [普京为85岁莫斯科国立大学校长祝寿](https://so.toutiao.com/search?keyword=普京为85岁莫斯科国立大学校长祝寿)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
+1. [俄防长：法若出兵援乌是自找麻烦](https://so.toutiao.com/search?keyword=俄防长：法若出兵援乌是自找麻烦)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [东莞一养老院发生火灾致3死10伤](https://so.toutiao.com/search?keyword=东莞一养老院发生火灾致3死10伤)
+1. [以色列军方和总统接连道歉](https://so.toutiao.com/search?keyword=以色列军方和总统接连道歉)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [吉林大广高速14车连撞 有人员受伤](https://so.toutiao.com/search?keyword=吉林大广高速14车连撞+有人员受伤)
+1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
+1. [台湾花莲地震重创公路 航拍照曝光](https://so.toutiao.com/search?keyword=台湾花莲地震重创公路+航拍照曝光)
+1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
+1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
+1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
+1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
+1. [驻刚果金使馆发布当地安全形势通报](https://so.toutiao.com/search?keyword=驻刚果金使馆发布当地安全形势通报)
+1. [官方回应福宝被人不戴手套戳头](https://so.toutiao.com/search?keyword=官方回应福宝被人不戴手套戳头)
+1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
+1. [男子称吃完饭遭临时加价还被嘲讽](https://so.toutiao.com/search?keyword=男子称吃完饭遭临时加价还被嘲讽)
+1. [詹姆斯被判一级恶意犯规](https://so.toutiao.com/search?keyword=詹姆斯被判一级恶意犯规)
+1. [雷军 整顿各行各业的神](https://so.toutiao.com/search?keyword=雷军+整顿各行各业的神)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [家国永念](https://so.toutiao.com/search?keyword=家国永念)
+1. [男子在地铁站偷拍女生还指责其穿着](https://so.toutiao.com/search?keyword=男子在地铁站偷拍女生还指责其穿着)
 1. [贵州毕节：万紫千红总是春](https://so.toutiao.com/search?keyword=贵州毕节：万紫千红总是春)
 1. [北约或将正式承担起对乌军援责任](https://so.toutiao.com/search?keyword=北约或将正式承担起对乌军援责任)
 1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
-1. [以色列军方和总统接连道歉](https://so.toutiao.com/search?keyword=以色列军方和总统接连道歉)
 1. [00后入殓师：想让离开的人比较体面](https://so.toutiao.com/search?keyword=00后入殓师：想让离开的人比较体面)
 1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
-1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
-1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
-1. [普京为85岁莫斯科国立大学校长祝寿](https://so.toutiao.com/search?keyword=普京为85岁莫斯科国立大学校长祝寿)
-1. [官方回应福宝被人不戴手套戳头](https://so.toutiao.com/search?keyword=官方回应福宝被人不戴手套戳头)
-1. [东莞一养老院发生火灾致3死10伤](https://so.toutiao.com/search?keyword=东莞一养老院发生火灾致3死10伤)
-1. [驻刚果金使馆发布当地安全形势通报](https://so.toutiao.com/search?keyword=驻刚果金使馆发布当地安全形势通报)
-1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
-1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
 1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
 1. [四川话“果赖”成功召唤福宝](https://so.toutiao.com/search?keyword=四川话“果赖”成功召唤福宝)
 1. [两游客在河南博物馆激烈争吵](https://so.toutiao.com/search?keyword=两游客在河南博物馆激烈争吵)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
 1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
 1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
 1. [军嫂带龙凤胎到部队探亲](https://so.toutiao.com/search?keyword=军嫂带龙凤胎到部队探亲)
 1. [巴基斯坦老人守中国烈士陵园40余载](https://so.toutiao.com/search?keyword=巴基斯坦老人守中国烈士陵园40余载)
-1. [交警称奔驰2次碾压小孩非主观故意](https://so.toutiao.com/search?keyword=交警称奔驰2次碾压小孩非主观故意)
 1. [英国游客大赞杭州是旅游胜地](https://so.toutiao.com/search?keyword=英国游客大赞杭州是旅游胜地)
 1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [6句绝美清明诗词](https://so.toutiao.com/search?keyword=6句绝美清明诗词)
@@ -66,12 +83,9 @@
 1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
 1. [媒体人回应广东男篮：不存在造谣](https://so.toutiao.com/search?keyword=媒体人回应广东男篮：不存在造谣)
 1. [美媒：以色列升级对伊朗的影子战争](https://so.toutiao.com/search?keyword=美媒：以色列升级对伊朗的影子战争)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
 1. [北约成员国对军援乌克兰意见不一](https://so.toutiao.com/search?keyword=北约成员国对军援乌克兰意见不一)
 1. [医学生在夜市摆摊按摩受欢迎](https://so.toutiao.com/search?keyword=医学生在夜市摆摊按摩受欢迎)
-1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [奔驰女司机碾压孩子后驶离](https://so.toutiao.com/search?keyword=奔驰女司机碾压孩子后驶离)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
 1. [俄老人钓鱼被困吃树皮和鱼生存多月](https://so.toutiao.com/search?keyword=俄老人钓鱼被困吃树皮和鱼生存多月)
 1. [《与凤行》圆房名场面](https://so.toutiao.com/search?keyword=《与凤行》圆房名场面)
 1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
