--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,59 +1,77 @@
 # 2024-04-04
 
-共 254 条
+共 268 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 17:00:57 GMT+0800 (China Standard Time) -->
-1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
-1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
+<!-- 最后更新时间 Thu Apr 04 2024 18:00:36 GMT+0800 (China Standard Time) -->
+1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
+1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
 1. [英雄从未远去](https://so.toutiao.com/search?keyword=英雄从未远去)
-1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
-1. [地震大楼倒塌瞬间女子拔腿就跑](https://so.toutiao.com/search?keyword=地震大楼倒塌瞬间女子拔腿就跑)
+1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
+1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
 1. [交警称奔驰2次碾压小孩非主观故意](https://so.toutiao.com/search?keyword=交警称奔驰2次碾压小孩非主观故意)
-1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
+1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
+1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
+1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
+1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
+1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
+1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
+1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
+1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
+1. [地震时男孩一把抱起同桌往外冲](https://so.toutiao.com/search?keyword=地震时男孩一把抱起同桌往外冲)
 1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
+1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [福宝在四川的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在四川的家里嘎嘎炫饭)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
+1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
+1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
+1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
+1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
+1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
+1. [杭州00后车主提前数小时到店提SU7](https://so.toutiao.com/search?keyword=杭州00后车主提前数小时到店提SU7)
+1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
+1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
+1. [《惜花芷》开局就抄家](https://so.toutiao.com/search?keyword=《惜花芷》开局就抄家)
+1. [“消费降级”的香港人正挤爆深圳](https://so.toutiao.com/search?keyword=“消费降级”的香港人正挤爆深圳)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
+1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
+1. [吉林有学校组织学生到烈士陵园扫墓](https://so.toutiao.com/search?keyword=吉林有学校组织学生到烈士陵园扫墓)
+1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
+1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
+1. [乌外长：西方供乌武器根本不够](https://so.toutiao.com/search?keyword=乌外长：西方供乌武器根本不够)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
+1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
+1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
+1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
+1. [吉林大广高速14车连撞 有人员受伤](https://so.toutiao.com/search?keyword=吉林大广高速14车连撞+有人员受伤)
+1. [盐湖股份称未受青海地震影响](https://so.toutiao.com/search?keyword=盐湖股份称未受青海地震影响)
+1. [论先进生产工具在祭祖中产生的作用](https://so.toutiao.com/search?keyword=论先进生产工具在祭祖中产生的作用)
+1. [地震大楼倒塌瞬间女子拔腿就跑](https://so.toutiao.com/search?keyword=地震大楼倒塌瞬间女子拔腿就跑)
 1. [福宝在成都的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在成都的家里嘎嘎炫饭)
 1. [知名外企要彻底撤离中国？假的](https://so.toutiao.com/search?keyword=知名外企要彻底撤离中国？假的)
 1. [地震警报响起16岁男生抱起同桌撤离](https://so.toutiao.com/search?keyword=地震警报响起16岁男生抱起同桌撤离)
-1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
-1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
-1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
-1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
-1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
-1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
-1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
-1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
 1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [杭州00后车主提前数小时到店提SU7](https://so.toutiao.com/search?keyword=杭州00后车主提前数小时到店提SU7)
 1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
-1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
-1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
-1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
 1. [普京为85岁莫斯科国立大学校长祝寿](https://so.toutiao.com/search?keyword=普京为85岁莫斯科国立大学校长祝寿)
-1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [俄防长：法若出兵援乌是自找麻烦](https://so.toutiao.com/search?keyword=俄防长：法若出兵援乌是自找麻烦)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
 1. [东莞一养老院发生火灾致3死10伤](https://so.toutiao.com/search?keyword=东莞一养老院发生火灾致3死10伤)
 1. [以色列军方和总统接连道歉](https://so.toutiao.com/search?keyword=以色列军方和总统接连道歉)
 1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
-1. [吉林大广高速14车连撞 有人员受伤](https://so.toutiao.com/search?keyword=吉林大广高速14车连撞+有人员受伤)
-1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [台湾花莲地震重创公路 航拍照曝光](https://so.toutiao.com/search?keyword=台湾花莲地震重创公路+航拍照曝光)
-1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
-1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
 1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
-1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
 1. [驻刚果金使馆发布当地安全形势通报](https://so.toutiao.com/search?keyword=驻刚果金使馆发布当地安全形势通报)
 1. [官方回应福宝被人不戴手套戳头](https://so.toutiao.com/search?keyword=官方回应福宝被人不戴手套戳头)
-1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
 1. [男子称吃完饭遭临时加价还被嘲讽](https://so.toutiao.com/search?keyword=男子称吃完饭遭临时加价还被嘲讽)
 1. [詹姆斯被判一级恶意犯规](https://so.toutiao.com/search?keyword=詹姆斯被判一级恶意犯规)
 1. [雷军 整顿各行各业的神](https://so.toutiao.com/search?keyword=雷军+整顿各行各业的神)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
 1. [家国永念](https://so.toutiao.com/search?keyword=家国永念)
 1. [男子在地铁站偷拍女生还指责其穿着](https://so.toutiao.com/search?keyword=男子在地铁站偷拍女生还指责其穿着)
 1. [贵州毕节：万紫千红总是春](https://so.toutiao.com/search?keyword=贵州毕节：万紫千红总是春)
@@ -61,15 +79,12 @@
 1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
 1. [00后入殓师：想让离开的人比较体面](https://so.toutiao.com/search?keyword=00后入殓师：想让离开的人比较体面)
 1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
-1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
 1. [四川话“果赖”成功召唤福宝](https://so.toutiao.com/search?keyword=四川话“果赖”成功召唤福宝)
 1. [两游客在河南博物馆激烈争吵](https://so.toutiao.com/search?keyword=两游客在河南博物馆激烈争吵)
-1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
 1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
 1. [军嫂带龙凤胎到部队探亲](https://so.toutiao.com/search?keyword=军嫂带龙凤胎到部队探亲)
 1. [巴基斯坦老人守中国烈士陵园40余载](https://so.toutiao.com/search?keyword=巴基斯坦老人守中国烈士陵园40余载)
 1. [英国游客大赞杭州是旅游胜地](https://so.toutiao.com/search?keyword=英国游客大赞杭州是旅游胜地)
-1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [6句绝美清明诗词](https://so.toutiao.com/search?keyword=6句绝美清明诗词)
 1. [奔驰碾压孩子后驶离 女司机已找到](https://so.toutiao.com/search?keyword=奔驰碾压孩子后驶离+女司机已找到)
 1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
@@ -88,7 +103,6 @@
 1. [奔驰女司机碾压孩子后驶离](https://so.toutiao.com/search?keyword=奔驰女司机碾压孩子后驶离)
 1. [俄老人钓鱼被困吃树皮和鱼生存多月](https://so.toutiao.com/search?keyword=俄老人钓鱼被困吃树皮和鱼生存多月)
 1. [《与凤行》圆房名场面](https://so.toutiao.com/search?keyword=《与凤行》圆房名场面)
-1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
 1. [台湾花莲倾斜大楼位移又增加5厘米](https://so.toutiao.com/search?keyword=台湾花莲倾斜大楼位移又增加5厘米)
 1. [小学生向烈士英名墙跪拜](https://so.toutiao.com/search?keyword=小学生向烈士英名墙跪拜)
 1. [姜爷爷说福宝有点紧张](https://so.toutiao.com/search?keyword=姜爷爷说福宝有点紧张)
