--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,56 +1,71 @@
 # 2024-04-04
 
-共 315 条
+共 329 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 22:00:52 GMT+0800 (China Standard Time) -->
-1. [美财长耶伦抵达广州](https://so.toutiao.com/search?keyword=美财长耶伦抵达广州)
+<!-- 最后更新时间 Thu Apr 04 2024 23:00:36 GMT+0800 (China Standard Time) -->
 1. [外卖员闯红灯撞到老人后情绪崩溃](https://so.toutiao.com/search?keyword=外卖员闯红灯撞到老人后情绪崩溃)
+1. [美财长耶伦抵达广州](https://so.toutiao.com/search?keyword=美财长耶伦抵达广州)
 1. [清明时节话清明](https://so.toutiao.com/search?keyword=清明时节话清明)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
-1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
-1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
-1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
-1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
 1. [母女二人从店里出来被失控车辆撞上](https://so.toutiao.com/search?keyword=母女二人从店里出来被失控车辆撞上)
+1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
+1. [印度一男子徒手与伤人豹子搏斗](https://so.toutiao.com/search?keyword=印度一男子徒手与伤人豹子搏斗)
+1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
+1. [律师称“骨灰房”或涉嫌违法](https://so.toutiao.com/search?keyword=律师称“骨灰房”或涉嫌违法)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
 1. [罪犯史泰龙被执行死刑](https://so.toutiao.com/search?keyword=罪犯史泰龙被执行死刑)
 1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
 1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
-1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
-1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
-1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
+1. [房主回应平移别墅：违建整改](https://so.toutiao.com/search?keyword=房主回应平移别墅：违建整改)
+1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
+1. [《与凤行》沈璃事后翻脸不认人](https://so.toutiao.com/search?keyword=《与凤行》沈璃事后翻脸不认人)
 1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
-1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
-1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
 1. [财政部副部长廖岷与耶伦握手交谈](https://so.toutiao.com/search?keyword=财政部副部长廖岷与耶伦握手交谈)
-1. [大广高速14车连撞疑因旁边烧荒所致](https://so.toutiao.com/search?keyword=大广高速14车连撞疑因旁边烧荒所致)
-1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
-1. [烈士父母赴儿子生前部队为其扫墓](https://so.toutiao.com/search?keyword=烈士父母赴儿子生前部队为其扫墓)
-1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
-1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
-1. [律师称“骨灰房”或涉嫌违法](https://so.toutiao.com/search?keyword=律师称“骨灰房”或涉嫌违法)
+1. [清明节娃哈哈原总部门口摆满鲜花](https://so.toutiao.com/search?keyword=清明节娃哈哈原总部门口摆满鲜花)
+1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
+1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
+1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
+1. [官方回应学校要求家长到校门口执勤](https://so.toutiao.com/search?keyword=官方回应学校要求家长到校门口执勤)
+1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
 1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
+1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
+1. [《乘风踏浪》乔杉评价杨子姗](https://so.toutiao.com/search?keyword=《乘风踏浪》乔杉评价杨子姗)
+1. [央视认证《追风者》是佳作](https://so.toutiao.com/search?keyword=央视认证《追风者》是佳作)
+1. [上海台商捐赠200万元驰援花莲灾区](https://so.toutiao.com/search?keyword=上海台商捐赠200万元驰援花莲灾区)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
+1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
+1. [耶伦：美不想与华经济脱钩](https://so.toutiao.com/search?keyword=耶伦：美不想与华经济脱钩)
+1. [烈士父母赴儿子生前部队为其扫墓](https://so.toutiao.com/search?keyword=烈士父母赴儿子生前部队为其扫墓)
+1. [麻辣烫原材料节前从全国运往天水](https://so.toutiao.com/search?keyword=麻辣烫原材料节前从全国运往天水)
+1. [南昌大风坠亡事件初查和房屋质量无关](https://so.toutiao.com/search?keyword=南昌大风坠亡事件初查和房屋质量无关)
+1. [中信证券两单IPO同一天被终止审核](https://so.toutiao.com/search?keyword=中信证券两单IPO同一天被终止审核)
+1. [华南F3拜山祭祖：遇山开山遇水撑船](https://so.toutiao.com/search?keyword=华南F3拜山祭祖：遇山开山遇水撑船)
+1. [大广高速14车连撞疑因烧荒浓烟所致](https://so.toutiao.com/search?keyword=大广高速14车连撞疑因烧荒浓烟所致)
+1. [野猪进村攻击老人 村民持棍棒驱赶](https://so.toutiao.com/search?keyword=野猪进村攻击老人+村民持棍棒驱赶)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [伊朗安全部队击毙16名恐怖分子](https://so.toutiao.com/search?keyword=伊朗安全部队击毙16名恐怖分子)
+1. [轿车撞匝道水泥墩后又没拉手刹溜车](https://so.toutiao.com/search?keyword=轿车撞匝道水泥墩后又没拉手刹溜车)
+1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
+1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
+1. [开封王婆说自己是家里的润滑剂](https://so.toutiao.com/search?keyword=开封王婆说自己是家里的润滑剂)
+1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
+1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [大广高速14车连撞疑因旁边烧荒所致](https://so.toutiao.com/search?keyword=大广高速14车连撞疑因旁边烧荒所致)
 1. [房主回应平移别墅：系违建整改之策](https://so.toutiao.com/search?keyword=房主回应平移别墅：系违建整改之策)
 1. [姜爷爷离开卧龙神树坪](https://so.toutiao.com/search?keyword=姜爷爷离开卧龙神树坪)
 1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
 1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
-1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
 1. [女子经常在楼道放火烧纸墙都被熏黑](https://so.toutiao.com/search?keyword=女子经常在楼道放火烧纸墙都被熏黑)
-1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
-1. [开封王婆说自己是家里的润滑剂](https://so.toutiao.com/search?keyword=开封王婆说自己是家里的润滑剂)
-1. [央视认证《追风者》是佳作](https://so.toutiao.com/search?keyword=央视认证《追风者》是佳作)
-1. [清明节娃哈哈原总部门口摆满鲜花](https://so.toutiao.com/search?keyword=清明节娃哈哈原总部门口摆满鲜花)
-1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
 1. [研究：微塑料会严重损害造血系统](https://so.toutiao.com/search?keyword=研究：微塑料会严重损害造血系统)
 1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
 1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
 1. [威姆斯：我已准备好季后赛](https://so.toutiao.com/search?keyword=威姆斯：我已准备好季后赛)
 1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
 1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
-1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
 1. [鲍威尔称过早降息或非常具有破坏性](https://so.toutiao.com/search?keyword=鲍威尔称过早降息或非常具有破坏性)
 1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
@@ -89,7 +104,6 @@
 1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
 1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
-1. [野猪进村攻击老人 村民持棍棒驱赶](https://so.toutiao.com/search?keyword=野猪进村攻击老人+村民持棍棒驱赶)
 1. [失火致3死养老院：不存在20平米住13人](https://so.toutiao.com/search?keyword=失火致3死养老院：不存在20平米住13人)
 1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
 1. [俄官员：将对北约任何威胁做出回应](https://so.toutiao.com/search?keyword=俄官员：将对北约任何威胁做出回应)
