--- a/archives/toutiao-search/2024-04-07.md
+++ b/archives/toutiao-search/2024-04-07.md
@@ -1,54 +1,72 @@
 # 2024-04-07
 
-共 199 条
+共 216 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 07 2024 12:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 07 2024 13:01:00 GMT+0800 (China Standard Time) -->
+1. [奔驰车轧蒜苗被砸 车主回应](https://so.toutiao.com/search?keyword=奔驰车轧蒜苗被砸+车主回应)
+1. [五一假期前后都要调休上班](https://so.toutiao.com/search?keyword=五一假期前后都要调休上班)
+1. [清明节假期国内出游1.19亿人次](https://so.toutiao.com/search?keyword=清明节假期国内出游1.19亿人次)
 1. [媒体：耶伦访华的一细节值得美深思](https://so.toutiao.com/search?keyword=媒体：耶伦访华的一细节值得美深思)
 1. [律师：大妈原本受害砸奔驰构成犯罪](https://so.toutiao.com/search?keyword=律师：大妈原本受害砸奔驰构成犯罪)
-1. [清明节假期国内出游1.19亿人次](https://so.toutiao.com/search?keyword=清明节假期国内出游1.19亿人次)
+1. [金价逼近720元/克](https://so.toutiao.com/search?keyword=金价逼近720元/克)
 1. [伊朗伊斯兰革命卫队：将报复以色列](https://so.toutiao.com/search?keyword=伊朗伊斯兰革命卫队：将报复以色列)
-1. [郑州全城寻找2枚被偷天鹅蛋](https://so.toutiao.com/search?keyword=郑州全城寻找2枚被偷天鹅蛋)
-1. [官方通报15岁女孩被围殴](https://so.toutiao.com/search?keyword=官方通报15岁女孩被围殴)
-1. [网友：五一原来只多放一天假](https://so.toutiao.com/search?keyword=网友：五一原来只多放一天假)
-1. [秋天妈妈承认离婚三次](https://so.toutiao.com/search?keyword=秋天妈妈承认离婚三次)
 1. [疑似男学生言语调戏女代课老师](https://so.toutiao.com/search?keyword=疑似男学生言语调戏女代课老师)
-1. [奔驰车轧蒜苗被砸 车主回应](https://so.toutiao.com/search?keyword=奔驰车轧蒜苗被砸+车主回应)
-1. [大V解读为何耶伦批中国产能剩余大](https://so.toutiao.com/search?keyword=大V解读为何耶伦批中国产能剩余大)
-1. [“王婆”换人后节目热度不减](https://so.toutiao.com/search?keyword=“王婆”换人后节目热度不减)
+1. [官方通报15岁女孩被围殴](https://so.toutiao.com/search?keyword=官方通报15岁女孩被围殴)
+1. [郑州全城寻找2枚被偷天鹅蛋](https://so.toutiao.com/search?keyword=郑州全城寻找2枚被偷天鹅蛋)
 1. [白岩松评江西提灯定损事件](https://so.toutiao.com/search?keyword=白岩松评江西提灯定损事件)
-1. [蔡磊称身体已到渐冻症晚期](https://so.toutiao.com/search?keyword=蔡磊称身体已到渐冻症晚期)
+1. [大V解读为何耶伦批中国产能剩余大](https://so.toutiao.com/search?keyword=大V解读为何耶伦批中国产能剩余大)
+1. [陈楚生与儿子同框表演](https://so.toutiao.com/search?keyword=陈楚生与儿子同框表演)
+1. [秋天妈妈承认离婚三次](https://so.toutiao.com/search?keyword=秋天妈妈承认离婚三次)
 1. [福州辟谣举办体育中考模拟测试](https://so.toutiao.com/search?keyword=福州辟谣举办体育中考模拟测试)
-1. [大学老师教卜卦成“网红课”](https://so.toutiao.com/search?keyword=大学老师教卜卦成“网红课”)
-1. [李铁认罪后足坛“漏网大鱼”还有谁](https://so.toutiao.com/search?keyword=李铁认罪后足坛“漏网大鱼”还有谁)
 1. [旅行博主称在南昌公厕充电被威胁](https://so.toutiao.com/search?keyword=旅行博主称在南昌公厕充电被威胁)
-1. [部分小学生沉迷“烟卡”需警惕](https://so.toutiao.com/search?keyword=部分小学生沉迷“烟卡”需警惕)
-1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
-1. [男子数次故意别车被拘留10日](https://so.toutiao.com/search?keyword=男子数次故意别车被拘留10日)
-1. [持续飞涨的黄金和逐渐脱钩的美元](https://so.toutiao.com/search?keyword=持续飞涨的黄金和逐渐脱钩的美元)
-1. [成都“迪士尼”被限流](https://so.toutiao.com/search?keyword=成都“迪士尼”被限流)
-1. [南部战区位南海海域组织联合海空战巡](https://so.toutiao.com/search?keyword=南部战区位南海海域组织联合海空战巡)
+1. [消息称华为P70或不举办发布会](https://so.toutiao.com/search?keyword=消息称华为P70或不举办发布会)
 1. [金价为何再创新高](https://so.toutiao.com/search?keyword=金价为何再创新高)
-1. [菲美日澳今将在南海举行联合演习](https://so.toutiao.com/search?keyword=菲美日澳今将在南海举行联合演习)
+1. [蔡磊称身体已到渐冻症晚期](https://so.toutiao.com/search?keyword=蔡磊称身体已到渐冻症晚期)
+1. [骑士主帅：失误让我们吃了亏](https://so.toutiao.com/search?keyword=骑士主帅：失误让我们吃了亏)
+1. [持续飞涨的黄金和逐渐脱钩的美元](https://so.toutiao.com/search?keyword=持续飞涨的黄金和逐渐脱钩的美元)
+1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
+1. [患癌的凯特依然是英国王室最大秘密](https://so.toutiao.com/search?keyword=患癌的凯特依然是英国王室最大秘密)
 1. [智己L6轿车首搭固态电池“光年”](https://so.toutiao.com/search?keyword=智己L6轿车首搭固态电池“光年”)
+1. [以色列发生汽车冲撞抗议人群事件](https://so.toutiao.com/search?keyword=以色列发生汽车冲撞抗议人群事件)
+1. [“王婆”换人后节目热度不减](https://so.toutiao.com/search?keyword=“王婆”换人后节目热度不减)
+1. [陈楚生爆改冰川王子](https://so.toutiao.com/search?keyword=陈楚生爆改冰川王子)
+1. [大学老师教卜卦成“网红课”](https://so.toutiao.com/search?keyword=大学老师教卜卦成“网红课”)
 1. [现在是卖金饰的最佳时机吗](https://so.toutiao.com/search?keyword=现在是卖金饰的最佳时机吗)
+1. [成都“迪士尼”被限流](https://so.toutiao.com/search?keyword=成都“迪士尼”被限流)
+1. [上海站遭旅客冲卡是谁的责任](https://so.toutiao.com/search?keyword=上海站遭旅客冲卡是谁的责任)
+1. [部分小学生沉迷“烟卡”需警惕](https://so.toutiao.com/search?keyword=部分小学生沉迷“烟卡”需警惕)
+1. [价格战将燃油车企逼到角落](https://so.toutiao.com/search?keyword=价格战将燃油车企逼到角落)
+1. [大妈因没挤上公交拦车不让走](https://so.toutiao.com/search?keyword=大妈因没挤上公交拦车不让走)
+1. [李铁认罪后足坛“漏网大鱼”还有谁](https://so.toutiao.com/search?keyword=李铁认罪后足坛“漏网大鱼”还有谁)
+1. [媒体：美欧有关冯德莱恩去留的博弈](https://so.toutiao.com/search?keyword=媒体：美欧有关冯德莱恩去留的博弈)
+1. [男子被骗共享屏幕后冲进派出所求助](https://so.toutiao.com/search?keyword=男子被骗共享屏幕后冲进派出所求助)
+1. [媒体人：对阵东南亚球队就得选北方](https://so.toutiao.com/search?keyword=媒体人：对阵东南亚球队就得选北方)
+1. [媒体曝光段暄部分犯罪手法和经过](https://so.toutiao.com/search?keyword=媒体曝光段暄部分犯罪手法和经过)
+1. [男子数次故意别车被拘留10日](https://so.toutiao.com/search?keyword=男子数次故意别车被拘留10日)
+1. [赵雷开唱前歌迷在场外开“演唱会”](https://so.toutiao.com/search?keyword=赵雷开唱前歌迷在场外开“演唱会”)
+1. [厨房突然起火 孩子全程冷静灭火](https://so.toutiao.com/search?keyword=厨房突然起火+孩子全程冷静灭火)
+1. [男孩清明去墓地捡贡品回家倒在地上](https://so.toutiao.com/search?keyword=男孩清明去墓地捡贡品回家倒在地上)
+1. [派出所回应成都迪士尼引众人打卡](https://so.toutiao.com/search?keyword=派出所回应成都迪士尼引众人打卡)
+1. [以色列总理是否变成了美国桌上的菜](https://so.toutiao.com/search?keyword=以色列总理是否变成了美国桌上的菜)
+1. [男子刷鱼缸巨骨舌鱼受惊发威](https://so.toutiao.com/search?keyword=男子刷鱼缸巨骨舌鱼受惊发威)
+1. [林更新说要做赵丽颖的“瑶”](https://so.toutiao.com/search?keyword=林更新说要做赵丽颖的“瑶”)
+1. [南部战区位南海海域组织联合海空战巡](https://so.toutiao.com/search?keyword=南部战区位南海海域组织联合海空战巡)
+1. [新能源汽车废旧电池回收现状](https://so.toutiao.com/search?keyword=新能源汽车废旧电池回收现状)
+1. [韩国瑜讲“台湾地区”四字遭绿营批](https://so.toutiao.com/search?keyword=韩国瑜讲“台湾地区”四字遭绿营批)
+1. [网友：五一原来只多放一天假](https://so.toutiao.com/search?keyword=网友：五一原来只多放一天假)
+1. [菲美日澳今将在南海举行联合演习](https://so.toutiao.com/search?keyword=菲美日澳今将在南海举行联合演习)
 1. [海外华人博主：欧美现状没那么好](https://so.toutiao.com/search?keyword=海外华人博主：欧美现状没那么好)
 1. [林更新首次cos](https://so.toutiao.com/search?keyword=林更新首次cos)
-1. [上海站遭旅客冲卡是谁的责任](https://so.toutiao.com/search?keyword=上海站遭旅客冲卡是谁的责任)
 1. [清明假期广东接待游客1982.8万人次](https://so.toutiao.com/search?keyword=清明假期广东接待游客1982.8万人次)
-1. [男孩清明去墓地捡贡品回家倒在地上](https://so.toutiao.com/search?keyword=男孩清明去墓地捡贡品回家倒在地上)
 1. [大妈买无座票却强行霸座被拒后大骂](https://so.toutiao.com/search?keyword=大妈买无座票却强行霸座被拒后大骂)
 1. [杭州南站出现大面积拥堵 车站回应](https://so.toutiao.com/search?keyword=杭州南站出现大面积拥堵+车站回应)
-1. [林更新说要做赵丽颖的“瑶”](https://so.toutiao.com/search?keyword=林更新说要做赵丽颖的“瑶”)
 1. [男子散播前女友隐私视频要挟复合](https://so.toutiao.com/search?keyword=男子散播前女友隐私视频要挟复合)
 1. [湖人主帅：没有把重点放在排名上](https://so.toutiao.com/search?keyword=湖人主帅：没有把重点放在排名上)
 1. [广西人上4天休4天](https://so.toutiao.com/search?keyword=广西人上4天休4天)
-1. [派出所回应成都迪士尼引众人打卡](https://so.toutiao.com/search?keyword=派出所回应成都迪士尼引众人打卡)
 1. [大妈偷摘菠萝被发现竟说是买的](https://so.toutiao.com/search?keyword=大妈偷摘菠萝被发现竟说是买的)
-1. [厨房突然起火 孩子全程冷静灭火](https://so.toutiao.com/search?keyword=厨房突然起火+孩子全程冷静灭火)
 1. [摩托撞调头轿车 骑手不服责任认定](https://so.toutiao.com/search?keyword=摩托撞调头轿车+骑手不服责任认定)
 1. [人在淄博玩 行李沿墙根放](https://so.toutiao.com/search?keyword=人在淄博玩+行李沿墙根放)
-1. [赵雷开唱前歌迷在场外开“演唱会”](https://so.toutiao.com/search?keyword=赵雷开唱前歌迷在场外开“演唱会”)
 1. [青岛海牛开局四连败问题出在哪儿](https://so.toutiao.com/search?keyword=青岛海牛开局四连败问题出在哪儿)
 1. [阿根廷总统称与华贸易关系一点没变](https://so.toutiao.com/search?keyword=阿根廷总统称与华贸易关系一点没变)
 1. [随马英九参访的台青谈对陕西印象](https://so.toutiao.com/search?keyword=随马英九参访的台青谈对陕西印象)
@@ -72,7 +90,6 @@
 1. [马英九参访西安国家版本馆](https://so.toutiao.com/search?keyword=马英九参访西安国家版本馆)
 1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
 1. [俄乌冲突中双方共损失多少辆坦克](https://so.toutiao.com/search?keyword=俄乌冲突中双方共损失多少辆坦克)
-1. [以色列总理是否变成了美国桌上的菜](https://so.toutiao.com/search?keyword=以色列总理是否变成了美国桌上的菜)
 1. [路边斜着栽树引争议](https://so.toutiao.com/search?keyword=路边斜着栽树引争议)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
 1. [清明假期旅游火爆](https://so.toutiao.com/search?keyword=清明假期旅游火爆)
